ready for npm publish

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "organic-socketioActions",
+  "name": "organic-socketioactions",
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
